--- a/index.html
+++ b/index.html
@@ -67,7 +67,22 @@
             </div>
         </section>
 
+        <section id="contact">
+            <div class="wrapper">
+                <h3>Contactez-nous</h3>
+                <p>Chez Travel Agency nous savons que voyager est une aventure humaine mais également un engagement financier important pour vous. C'est pourquoi nous mettons un point d'honneur à prendre en compte de vos attentes pour vous aider dans la préparation de votre séjour, ciruit ou voyage sur mesure.</p>
 
+                <form>
+                    <label for="name">Nom</label>
+                    <input type="text" id="name" placeholder="Votre nom">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" placeholder="Votre email">
+
+                    <input type="submit" value="OK" class="button_3">
+                </form>
+            </div>
+        </section>
+        
         <footer>
             <div class="wapper">
                 <h1>Travel Agency<span class="orange">.</span></h1>
