--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <section id="main-image">
             <div class="wrapper">
                 <h2>Organisez votre <br> <strong>voyage sur mesure</strong></h2>
+                <a href="#" class="button_1">Par ici</a>
             </div>
         </section>
 
@@ -49,6 +50,7 @@
 
         <section id="possibilities">
             <div class="wrapper">
+                <article style="background-image: url('images/article1.jpg')">
                     <div class="overlay">
                         <h4>Partez en famille</h4>
                         <p><small>Offrez le meilleur à ceux que vous aimez et partager des moments fabuleux</small></p>
@@ -56,6 +58,7 @@
                     </div>
                     
                 </article>
+                <article style="background-image: url('images/article2.jpg')">
                     <div  class="overlay">
                         <h4>Envie de s'evader</h4>
                         <p><small>Parfois un peu d'evasion serait la bienvenue et ferait le plus grand bien!</small></p>
@@ -82,7 +85,7 @@
                 </form>
             </div>
         </section>
-        
+
         <footer>
             <div class="wapper">
                 <h1>Travel Agency<span class="orange">.</span></h1>
